Kindly open it in chrome to see the changes

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <section class="glass">
         <div class="dashboard">
           <div class="user">
-            <img src="./images/avatar.png" alt="" />
-            <h3>Simo Edwin</h3>
-            <p>Pro Member</p>
+            <img src="/Users/anurag/Desktop/CovidYodha/images/doctor.png" alt="" height="100" width="100"/>
+            <h3>COVID Yodha</h3>
+            <p>"We are in this together, we will get through it together."</p>
           </div>
           <div class="links">
             <div class="link">
@@ -45,7 +45,7 @@
         </div>
         <div class="games">
           <div class="status">
-            <h1>Active Games</h1>
+            <h1>COVID-19 RESOURCES INFO</h1>
             <input type="text" />
           </div>
           <div class="cards">
