--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
           </div>
           <div class="pro">
-            <h2>Join pro for free games.</h2>
+            <h2>Join our WhatsApp group.</h2>
             <img src="./images/controller.png" alt="" />
           </div>
         </div>
