--- a/index.html
+++ b/index.html
@@ -16,31 +16,39 @@
       <section class="glass">
         <div class="dashboard">
           <div class="user">
-            <img src="/Users/anurag/Desktop/CovidYodha/images/doctor.png" alt="" height="100" width="100"/>
+            <img src="/Users/anurag/Desktop/CovidYodha/images/facemask-insight-1.png" alt="" height="100" width="100"/>
             <h3>COVID Yodha</h3>
             <p>"We are in this together, we will get through it together."</p>
           </div>
           <div class="links">
             <div class="link">
-              <img src="./images/twitch.png" alt="" />
-              <h2>Streams</h2>
+              <img src="/Users/anurag/Desktop/CovidYodha/images/282100.png" alt="" height="40" width="40" />
+              <h2>Google Sheet 1</h2>
             </div>
             <div class="link">
-              <img src="./images/steam.png" alt="" />
-              <h2>Games</h2>
+              <img src="/Users/anurag/Desktop/CovidYodha/images/282100.png" alt="" height="40" width="40" />
+              <h2>Google Sheet 2</h2>
             </div>
             <div class="link">
-              <img src="./images/upcoming.png" alt="" />
-              <h2>New</h2>
+              <img src="/Users/anurag/Desktop/CovidYodha/images/282100.png" alt="" height="40" width="40" />
+              <h2>Google Sheet 3</h2>
             </div>
             <div class="link">
-              <img src="./images/library.png" alt="" />
-              <h2>Library</h2>
+            <img src="/Users/anurag/Desktop/CovidYodha/images/282100.png" alt="" height="40" width="40" />
+              <h2>Google Sheet 4</h2>
+            </div>
+            <div class="link">
+            <img src="/Users/anurag/Desktop/CovidYodha/images/282100.png" alt="" height="40" width="40" />
+              <h2>Google Sheet 4</h2>
+            </div>
+            <div class="link">
+            <img src="/Users/anurag/Desktop/CovidYodha/images/282100.png" alt="" height="40" width="40" />
+              <h2>Google Sheet 4</h2>
             </div>
           </div>
           <div class="pro">
             <h2>Join our WhatsApp group.</h2>
-            <img src="./images/controller.png" alt="" />
+            <img src="/Users/anurag/Desktop/CovidYodha/images/WhatsApp-Logo-1 (1).png"  height="100" width="110" />
           </div>
         </div>
         <div class="games">
