--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Glass Website</title>
+    <title>COVID YODHA 2021: </title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
@@ -16,39 +16,39 @@
       <section class="glass">
         <div class="dashboard">
           <div class="user">
-            <img src="/Users/anurag/Desktop/CovidYodha/images/facemask-insight-1.png" alt="" height="100" width="100"/>
+            <img src="/images/facemask-insight-1.png" alt="" height="100" width="100"/>
             <h3>COVID Yodha</h3>
             <p>"We are in this together, we will get through it together."</p>
           </div>
           <div class="links">
             <div class="link">
-              <img src="/Users/anurag/Desktop/CovidYodha/images/282100.png" alt="" height="40" width="40" />
+              <img src="/images/282100.png" alt="" height="40" width="40" />
               <h2>Google Sheet 1</h2>
             </div>
             <div class="link">
-              <img src="/Users/anurag/Desktop/CovidYodha/images/282100.png" alt="" height="40" width="40" />
+              <img src="/images/282100.png" alt="" height="40" width="40" />
               <h2>Google Sheet 2</h2>
             </div>
             <div class="link">
-              <img src="/Users/anurag/Desktop/CovidYodha/images/282100.png" alt="" height="40" width="40" />
+              <img src="/images/282100.png" alt="" height="40" width="40" />
               <h2>Google Sheet 3</h2>
             </div>
             <div class="link">
-            <img src="/Users/anurag/Desktop/CovidYodha/images/282100.png" alt="" height="40" width="40" />
+            <img src="/images/282100.png" alt="" height="40" width="40" />
               <h2>Google Sheet 4</h2>
             </div>
             <div class="link">
-            <img src="/Users/anurag/Desktop/CovidYodha/images/282100.png" alt="" height="40" width="40" />
+            <img src="/images/282100.png" alt="" height="40" width="40" />
               <h2>Google Sheet 4</h2>
             </div>
             <div class="link">
-            <img src="/Users/anurag/Desktop/CovidYodha/images/282100.png" alt="" height="40" width="40" />
+            <img src="/images/282100.png" alt="" height="40" width="40" />
               <h2>Google Sheet 4</h2>
             </div>
           </div>
           <div class="pro">
             <h2>Join our WhatsApp group.</h2>
-            <img src="/Users/anurag/Desktop/CovidYodha/images/WhatsApp-Logo-1 (1).png"  height="100" width="110" />
+            <img src="/images/WhatsApp-Logo-1 (1).png"  height="100" width="110" />
           </div>
         </div>
         <div class="games">
@@ -90,5 +90,8 @@
     </main>
     <div class="circle1"></div>
     <div class="circle2"></div>
+    <footer>
+
+    </footer>
   </body>
 </html>
