--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -16,39 +15,39 @@
       <section class="glass">
         <div class="dashboard">
           <div class="user">
-            <img src="/images/facemask-insight-1.png" alt="" height="100" width="100"/>
+            <img src="./images/facemask01.png" alt="" height="100" width="100"/>
             <h3>COVID Yodha</h3>
             <p>"We are in this together, we will get through it together."</p>
           </div>
           <div class="links">
             <div class="link">
-              <img src="/images/282100.png" alt="" height="40" width="40" />
+              <img href="https://www.google.com" src="./images/282100.png" alt="" height="40" width="40" />
               <h2>Google Sheet 1</h2>
             </div>
             <div class="link">
-              <img src="/images/282100.png" alt="" height="40" width="40" />
+              <img src="./images/282100.png" alt="" height="40" width="40" />
               <h2>Google Sheet 2</h2>
             </div>
             <div class="link">
-              <img src="/images/282100.png" alt="" height="40" width="40" />
+              <img src="./images/282100.png" alt="" height="40" width="40" />
               <h2>Google Sheet 3</h2>
             </div>
             <div class="link">
-            <img src="/images/282100.png" alt="" height="40" width="40" />
+            <img src="./images/282100.png" alt="" height="40" width="40" />
               <h2>Google Sheet 4</h2>
             </div>
             <div class="link">
-            <img src="/images/282100.png" alt="" height="40" width="40" />
+            <img src="./images/282100.png" alt="" height="40" width="40" />
               <h2>Google Sheet 4</h2>
             </div>
             <div class="link">
-            <img src="/images/282100.png" alt="" height="40" width="40" />
+            <img src="./images/282100.png" alt="" height="40" width="40" />
               <h2>Google Sheet 4</h2>
             </div>
           </div>
           <div class="pro">
             <h2>Join our WhatsApp group.</h2>
-            <img src="/images/WhatsApp-Logo-1 (1).png"  height="100" width="110" />
+            <img src="./images/WhatsApp-Logo-1 (1).png"  height="100" width="110" />
           </div>
         </div>
         <div class="games">
