ref chnange location

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           </div>
           <div class="links">
             <div class="link">
-              <img href="https://www.google.com" src="./images/282100.png" alt="" height="40" width="40" />
-              <h2>Google Sheet 1</h2>
+              <img src="./images/282100.png" alt="" height="40" width="40" />
+              <h2 href="https://www.google.com" >Google Sheet 1</h2>
             </div>
             <div class="link">
               <img src="./images/282100.png" alt="" height="40" width="40" />
