--- a/index.html
+++ b/index.html
@@ -20,30 +20,48 @@
             <p>"We are in this together, we will get through it together."</p>
           </div>
           <div class="links">
+
             <div class="link">
+              <a href="https://www.google.com">
+              <img src="./images/282100.png" alt="" height="20" width="20" />
+              <h2>Oxygen-Cylinders</h2>
+              </a>
+            </div>
+
+            <div class="link">
+              <a href="https://www.google.com">
+              <img src="./images/282100.png" alt="" height="20" width="20" />
+              <h2>Oxyger-Refillers</h2>
+            </a>
+            </div>
+
+            <div class="link">
+              <a href="https://www.google.com">
+              <img src="./images/282100.png" alt="" height="20" width="20" />
+              <h2>Remdesivir</h2>
+              </a>
+            </div>
+
+            <div class="link">
+              <a href="https://www.google.com">
+              <img src="./images/282100.png" alt="" height="20" width="20" />
+              <h2>Plasma-Donation</h2>
+            </a>
+            </div>
+            <div class="link">
+              <a href="https://www.google.com">
+              <img src="./images/282100.png" alt="" height="20" width="20" />
+              <h2>Vaccination-Centre</h2>
+              </a>
+            </div>
+
+            <div class="link">
+              <a href="https://www.google.com">
               <img src="./images/282100.png" alt="" height="40" width="40" />
-              <h2 href="https://www.google.com" >Google Sheet 1</h2>
+              <h2>Oxygen-Beds</h2>
+            </a>
             </div>
-            <div class="link">
-              <img src="./images/282100.png" alt="" height="40" width="40" />
-              <h2>Google Sheet 2</h2>
-            </div>
-            <div class="link">
-              <img src="./images/282100.png" alt="" height="40" width="40" />
-              <h2>Google Sheet 3</h2>
-            </div>
-            <div class="link">
-            <img src="./images/282100.png" alt="" height="40" width="40" />
-              <h2>Google Sheet 4</h2>
-            </div>
-            <div class="link">
-            <img src="./images/282100.png" alt="" height="40" width="40" />
-              <h2>Google Sheet 4</h2>
-            </div>
-            <div class="link">
-            <img src="./images/282100.png" alt="" height="40" width="40" />
-              <h2>Google Sheet 4</h2>
-            </div>
+
           </div>
           <div class="pro">
             <h2>Join our WhatsApp group.</h2>
