--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="link">
               <a href="https://www.google.com">
               <img src="./images/282100.png" alt="" height="20" width="20" />
-              <h2>Oxyger-Refillers</h2>
+              <h2>Oxyger Refillers</h2>
             </a>
             </div>
 
@@ -45,20 +45,20 @@
             <div class="link">
               <a href="https://www.google.com">
               <img src="./images/282100.png" alt="" height="20" width="20" />
-              <h2>Plasma-Donation</h2>
+              <h2>Plasma Donation</h2>
             </a>
             </div>
             <div class="link">
               <a href="https://www.google.com">
               <img src="./images/282100.png" alt="" height="20" width="20" />
-              <h2>Vaccination-Centre</h2>
+              <h2>Vaccination Centre</h2>
               </a>
             </div>
 
             <div class="link">
               <a href="https://www.google.com">
               <img src="./images/282100.png" alt="" height="40" width="40" />
-              <h2>Oxygen-Beds</h2>
+              <h2>Oxygen Beds</h2>
             </a>
             </div>
 
@@ -95,7 +95,7 @@
             <div class="card">
               <img src="./images/spiderman.png" alt="" />
               <div class="card-info">
-                <h2>Spiderman Miles Morales</h2>
+                <h2>CovidYodha </h2>
                 <p>PS5 Version</p>
                 <div class="progress"></div>
               </div>
