--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,65 +12,72 @@
       rel="stylesheet"/>
     <link rel="stylesheet" href="./style.css" />
   </head>
+
+  <style>A {text-decoration: none;} </style>
+
   <body>
     <main>
       <section class="glass">
         <div class="dashboard">
           <div class="user">
             <img src="./images/facemask01.png" alt="" height="100" width="100"/>
-            <h3>COVID Yodha</h3>
-            <p>"We are in this together, we will get through it together."</p>
+            <h3>COVID Yodha Foundation</h3>
+            <p>We all have some to protect from this virus.</p>
           </div>
           <div class="links">
 
+            <h3>Information Sheets</h3>
             <div class="link">
               <a href="https://www.google.com">
-              <img src="./images/282100.png" alt="" height="20" width="20" />
-              <h2>Oxygen-Cylinders</h2>
+              <img src="./images/O2cylinder.png" alt="" height="40" width="40" />
+              <h2>Oxygen Cylinders</h2>
               </a>
             </div>
 
             <div class="link">
               <a href="https://www.google.com">
-              <img src="./images/282100.png" alt="" height="20" width="20" />
+              <img src="./images/refill.png" alt="" height="40" width="40" />
               <h2>Oxyger Refillers</h2>
             </a>
             </div>
 
             <div class="link">
               <a href="https://www.google.com">
-              <img src="./images/282100.png" alt="" height="20" width="20" />
+              <img src="./images/rem-med2.png" alt="" height="40" width="40" />
               <h2>Remdesivir</h2>
               </a>
             </div>
 
             <div class="link">
               <a href="https://www.google.com">
-              <img src="./images/282100.png" alt="" height="20" width="20" />
+              <img src="./images/plasma01.png" alt="" height="40" width="40" />
               <h2>Plasma Donation</h2>
             </a>
             </div>
             <div class="link">
               <a href="https://www.google.com">
-              <img src="./images/282100.png" alt="" height="20" width="20" />
+              <img src="./images/vac.png" alt="" height="40" width="40" />
               <h2>Vaccination Centre</h2>
               </a>
             </div>
 
             <div class="link">
               <a href="https://www.google.com">
-              <img src="./images/282100.png" alt="" height="40" width="40" />
+              <img src="./images/bed02.png" alt="" height="40" width="40" />
               <h2>Oxygen Beds</h2>
             </a>
             </div>
 
           </div>
           <div class="pro">
-            <h2>Join our WhatsApp group.</h2>
-            <img src="./images/WhatsApp-Logo-1 (1).png"  height="100" width="110" />
+            <a href="https://forms.gle/FaqVNgqsmmxxivX97">
+            <h2>Sign up as a Covid Yodha!</h2>
+            <img src="./images/forms.png"  height="85" width="70" />
+            </a>
           </div>
         </div>
-        <div class="games">
+
+        <div class="card01">
           <div class="status">
             <h1>COVID-19 RESOURCES INFO</h1>
             <input type="text" />
