--- a/index.html
+++ b/index.html
@@ -88,24 +88,24 @@
             <div class="card">
               <img src="./images/assassins.png" alt="" />
               <div class="card-info">
-                <h2>Assassins Creed Valhalla</h2>
-                <p>PS5 Version</p>
+                <h2>Aih ihphphpip</h2>
+                <p>PCJGcJGC</p>
               </div>
             </div>
 
             <div class="card">
               <img src="./images/sackboy.png" alt="" />
               <div class="card-info">
-                <h2>Sackboy A Great Advanture</h2>
-                <p>PS5 Version</p>
+                <h2>uogogougogue</h2>
+                <p>XXXXXX</p>
               </div>
             </div>
 
             <div class="card">
               <img src="./images/spiderman.png" alt="" />
               <div class="card-info">
-                <h2>CovidYodha </h2>
-                <p>PS5 Version</p>
+                <h2>pihphphipihpih </h2>
+                <p>Pihphpihhip</p>
               </div>
             </div>
           </div>
