--- a/index.html
+++ b/index.html
@@ -88,40 +88,40 @@
             <div class="card">
               <img src="./images/assassins.png" alt="" />
               <div class="card-info">
-                <h2>Aih ihphphpip</h2>
-                <p>PCJGcJGC</p>
+                <h2>WhatsApp Group-1</h2>
+                <p>Delhi</p>
               </div>
             </div>
 
             <div class="card">
               <img src="./images/sackboy.png" alt="" />
               <div class="card-info">
-                <h2>uogogougogue</h2>
-                <p>XXXXXX</p>
+                <h2>WhatsApp Group-2</h2>
+                <p>Delhi</p>
               </div>
             </div>
 
             <div class="card">
               <img src="./images/sackboy.png" alt="" />
               <div class="card-info">
-                <h2>uogogougogue</h2>
-                <p>XXXXXX</p>
+                <h2>WhatsApp Group-3</h2>
+                <p>Delhi</p>
               </div>
             </div>
 
             <div class="card">
               <img src="./images/sackboy.png" alt="" />
               <div class="card-info">
-                <h2>uogogougogue</h2>
-                <p>XXXXXX</p>
+                <h2>WhatsApp Group-4</h2>
+                <p>Delhi</p>
               </div>
             </div>
 
             <div class="card">
               <img src="./images/spiderman.png" alt="" />
               <div class="card-info">
-                <h2>pihphphipihpih </h2>
-                <p>Pihphpihhip</p>
+                <h2>WhatsApp Group-5</h2>
+                <p>Delhi</p>
               </div>
             </div>
           </div>
