--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"/>
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <style>A {text-decoration: none;} </style>
+  
   <body>
     <main>
       <section class="glass">
@@ -80,7 +80,7 @@
         <div class="card01">
           <div class="status">
             <h1>COVID-19 RESOURCES INFO</h1>
-            <input type="text" />
+            <input placeholder="" id ="Listgroups" type="text" onkeyup="myFunction()" />
           </div>
 
           <div class="cards">
@@ -88,40 +88,50 @@
             <div class="card">
               <img src="./images/assassins.png" alt="" />
               <div class="card-info">
+                <a href="#1">
                 <h2>WhatsApp Group-1</h2>
-                <p>Delhi</p>
+                <p>New Delhi</p>
+                </a>
               </div>
             </div>
 
             <div class="card">
               <img src="./images/sackboy.png" alt="" />
               <div class="card-info">
+                <a href="#2">
                 <h2>WhatsApp Group-2</h2>
-                <p>Delhi</p>
+                <p>New Delhi</p>
+                </a>
               </div>
             </div>
 
             <div class="card">
               <img src="./images/sackboy.png" alt="" />
               <div class="card-info">
+                <a href="#3">
                 <h2>WhatsApp Group-3</h2>
-                <p>Delhi</p>
+                <p>New Delhi</p>
+                </a>
               </div>
             </div>
 
             <div class="card">
               <img src="./images/sackboy.png" alt="" />
               <div class="card-info">
+                <a href="#4">
                 <h2>WhatsApp Group-4</h2>
-                <p>Delhi</p>
+                <p>New Delhi</p>
+                </a>
               </div>
             </div>
 
             <div class="card">
               <img src="./images/spiderman.png" alt="" />
               <div class="card-info">
+                <a href="#5">
                 <h2>WhatsApp Group-5</h2>
-                <p>Delhi</p>
+                <p>New Delhi</p>
+                </a>
               </div>
             </div>
           </div>
@@ -129,8 +139,7 @@
       </section>
     </main>
 
-    <footer>
-
+   <footer>
     </footer>
   </body>
 </html>
