--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"/>
     <link rel="stylesheet" href="./style.css" />
   </head>
-  
+
   <body>
     <main>
       <section class="glass">
@@ -88,7 +88,7 @@
             <div class="card">
               <img src="./images/assassins.png" alt="" />
               <div class="card-info">
-                <a href="#1">
+                <a href="https://chat.whatsapp.com/LlX4NvbME5PCUmiJHGbsRJ">
                 <h2>WhatsApp Group-1</h2>
                 <p>New Delhi</p>
                 </a>
@@ -98,7 +98,7 @@
             <div class="card">
               <img src="./images/sackboy.png" alt="" />
               <div class="card-info">
-                <a href="#2">
+                <a href="https://chat.whatsapp.com/K9IJkDxmTTT9DTJlaUP0TW">
                 <h2>WhatsApp Group-2</h2>
                 <p>New Delhi</p>
                 </a>
@@ -108,7 +108,7 @@
             <div class="card">
               <img src="./images/sackboy.png" alt="" />
               <div class="card-info">
-                <a href="#3">
+                <a href="https://chat.whatsapp.com/EbTkgDwZx7N9tYsTdv3U0s">
                 <h2>WhatsApp Group-3</h2>
                 <p>New Delhi</p>
                 </a>
@@ -118,7 +118,7 @@
             <div class="card">
               <img src="./images/sackboy.png" alt="" />
               <div class="card-info">
-                <a href="#4">
+                <a href="https://chat.whatsapp.com/GHxl1IuIlDd3kBy21E1HTI">
                 <h2>WhatsApp Group-4</h2>
                 <p>New Delhi</p>
                 </a>
@@ -128,7 +128,7 @@
             <div class="card">
               <img src="./images/spiderman.png" alt="" />
               <div class="card-info">
-                <a href="#5">
+                <a href="https://chat.whatsapp.com/CYwGxtQEi7C9xS3Yk7RtoT">
                 <h2>WhatsApp Group-5</h2>
                 <p>New Delhi</p>
                 </a>
